0.8 (??)
========

  * Added support for uploading videos (formats supported by Flickr only).
  * Added new 'All' and 'Video' filters to the file chooser dialog.
  * Added support for saving and loading 'projects'.
  * Added new items to the toolbar ('Open' and 'Save' for projects).
  * Ported to GtkApplication and GMenu (both the app menu and menu bar).
  * Don't give up on upload too early and retry some times when possible.
  * Report errors better, and more often (no more mysterious failures).
  * Make after-upload operations cancellable, repeatable and parallelizable.
  * Properly check and report whether an user is actually connected to flickr.
  * Renamed the 'Actions' menu to 'Edit' and brought the 'File' menu back.
  * Renamed the 'Load Pictures' item to 'Add Pictures'
  * Updated menu item accelerators and shortcuts.
  * Raised glib minimum version up to 2.32.
  * Raised gtk+ minimum version up to 3.4.
  * New build dependency: gstreamer 0.10 (for video upload support).
  * New build dependency: json-glib (> 0.12) (for the 'projects' feature).
  * Stop using gtk-mac-integration, now we have migrated to GMenu.
  * As usual, other minor improvements, bug fixes and cleanups.

Bug fixes:

  * #663352: Possible memory leak after uploading of image
  * #687741: Plural forms
  * #675540: Plural forms
  * #684501: i18n - consistently capitalize Flickr

News and updated translations:

  * TODO

0.7 (22 May 2012)
=================

  * Migrated to the new, OAuth-based, authentication system. Previous
    versions of frogr using the old API will be seamlessly updated.
  * Import tags from picture's metainformation if present..
  * Allow setting the geolocation information for a picture, if
    available, as extracted from its EXIF data.
  * New tags added are inmmediately added to the auto-completion feature.
  * Allow using a dark theme if available (Ignacio Casal Quinteiro)
  * Show error when loading a picture if bigger than maximum allowed size.